<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.vd.ses</groupId>
    <artifactId>demaut</artifactId>
    <version>8.0.0</version>
    <packaging>jar</packaging>

    <name>demaut</name>

    <parent>
        <groupId>ch.vd.devsupport</groupId>
        <artifactId>devsupport-application-parent</artifactId>
        <!-- please keep 'spring-boot.version' property up-to-date -->
        <version>3.6.0</version>
        <relativePath />
    </parent>

    <scm>
        <developerConnection>scm:git:git@bitbucket.etat-de-vaud.ch::/ses/demaut</developerConnection>
        <tag>8.0.0</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>nexus-dgnsi-server</id> <!-- doit matcher l'id du server dans settings.xml -->
            <name>Nexus DGSNI</name>
            <url>${nexus.url.stable}</url>
        </repository>
        <snapshotRepository>
            <id>nexus-dgnsi-server</id>
            <name>Nexus DGSNI</name>
            <url>${nexus.url.snapshots}</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>vd-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-quartz</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-authentication-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-batch-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-keepass-properties-api</artifactId>
        </dependency>
        <dependency>
            <!-- Disable stdout logging of Liquibase scripts -->
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-liquibase-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-jaxb</artifactId>
            <version>${demaut-jaxb.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-editique</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-antivirus</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-bice</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-ged</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-happyexchange</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-medreg</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-psyreg</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-keymanager</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-refinf</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-refsec</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-nareg</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-siti</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-wsclient-rcpers</artifactId>
            <version>${demaut-wsclient.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-keepass-properties-starter</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${org.mapstruct.version}</version>
        </dependency>
        <!-- JPA -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
        </dependency>

        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>javax.xml.bind</groupId>
                    <artifactId>jaxb-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- ESB -->
        <dependency>
            <groupId>ch.vd.technical.esb</groupId>
            <artifactId>esb-client-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.vd.technical.esb</groupId>
            <artifactId>esb-client</artifactId>
            <!-- first version to support java 17 : 5.8.0 -->
            <version>${esb-client.version}</version>
            <exclusions>
                <exclusion>
                    <!-- clashed with spring-jcl -->
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-activemq</artifactId>
        </dependency>
        <dependency>
            <groupId>com.atomikos</groupId>
            <artifactId>transactions-spring-boot3-starter</artifactId>
        </dependency>

        <!-- Monitoring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-actuator-starter</artifactId>
        </dependency>

        <!-- MISC -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.vd.shared</groupId>
            <artifactId>shared-batch-transaction</artifactId>
            <version>3.8.0</version>
        </dependency>
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${commons-validator}</version>
            <exclusions>
                <exclusion>
                    <!-- clashed with spring-jcl -->
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.vd.shared</groupId>
            <artifactId>shared-avs</artifactId>
            <version>${shared-avs}</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.libphonenumber</groupId>
            <artifactId>libphonenumber</artifactId>
            <version>8.13.7</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>3.0.0</version>
            <exclusions>
                <exclusion>
                    <!-- clashed with spring-jcl -->
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>2.9.1</version>
        </dependency>

        <!-- data faker -->
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-data-faker</artifactId>
        </dependency>

        <!-- TESTS -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-ant</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ch.vd.shared</groupId>
            <artifactId>shared-database-pumper</artifactId>
            <version>${shared-database-pumper.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.vd.devsupport</groupId>
            <artifactId>devsupport-liquibase-starter</artifactId>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <!-- for vm:// transport -->
            <groupId>org.apache.activemq</groupId>
            <artifactId>activemq-broker</artifactId>
            <version>${activemq.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <skip>false</skip>
                            <configLocation>${maven-checkstyle-plugin.configLocation}</configLocation>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.hibernate.orm</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>${hibernate.version}</version>
                        </path>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${spring-boot.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <compilerArg>
                            -Amapstruct.defaultComponentModel=spring
                        </compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <projectVersionPolicyId>SemVerVersionPolicy</projectVersionPolicyId>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
        <spring-boot.version>3.2.5</spring-boot.version>
        <sonar.coverage.exclusions>src/main/java/ch/vd/demaut/DemautApplication.java</sonar.coverage.exclusions>

        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <activemq.version>6.0.1</activemq.version>
        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
        <shared-database-pumper.version>6.0.0</shared-database-pumper.version>
        <demaut-jaxb.version>2.3.0</demaut-jaxb.version>
        <demaut-wsclient.version>2.6.0</demaut-wsclient.version>
        <esb-client.version>6.0.1</esb-client.version>
        <commons-validator>1.7</commons-validator>
        <shared-avs>2.0.0</shared-avs>
    </properties>
</project>
